--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
+keras==2.12.0
 MarkupSafe==2.1.1
 numpy==1.23.5
 scikit-learn==1.1.3
